--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
         <h1>欢迎来到GMGOD的个人主页</h1>
         <img src="your_profile_picture.jpg" alt="您的头像" style="border: 3px solid #000; border-radius: 50%; width: 200px; height: 200px;">
         <p>嗨，我是GMGOD，一个23岁的帅小伙，喜欢快乐的环境。我喜欢蓝色和黑色，我为您设计了一个春季主题的页面，希望它能给您带来快乐。</p>
+        <h2>关于我的妻子 - Yali Zhou</h2>
+        <p>我要向您介绍我的妻子，她名叫Yali Zhou。她是一个很特别的人，对我来说非常重要。我们一起享受生活，创造美好的回忆。</p>
     </div>
 </body>
 </html>
